--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 id="typing"></h1>
   </div>
   <div id="buttons" style="display:none;">
-    <h1>Drone Project</h1>
+    <h1>Drone Project Repositories</h1>
     <div id="links"></div>
   </div>
   <script src="scripts.js"></script>
