--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Drone Project</title>
+  <title>Drone Studio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <h1 id="typing"></h1>
   </div>
   <div id="buttons" style="display:none;">
-    <h1>Drone Project Repositories</h1>
+    <h1>Drone Studio Repositories</h1>
     <div id="links"></div>
   </div>
   <script src="scripts.js"></script>
